# src/shared/infra/http/routes/authenticate.routes.ts
@@ -1,11 +1,10 @@
-import { Router } from 'express';
-import { AuthenticateUserController } from '@modules/accounts/useCases/authenticationUser/AuthenticateUserController';
+import { Router } from "express";
+import { AuthenticateUserController } from "@modules/accounts/useCases/authenticationUser/AuthenticateUserController";
 
 const authenticateRoutes = Router();
 
 const authenticateUserController = new AuthenticateUserController();
 
-authenticateRoutes.post("/sessions",authenticateUserController.handle);
-
+authenticateRoutes.post("/sessions", authenticateUserController.handle);
 
 export { authenticateRoutes };
