# src/shared/infra/http/routes/categories.routes.ts
@@ -1,18 +1,16 @@
-import { Router } from 'express';
-import multer from "multer"
+import { Router } from "express";
+import multer from "multer";
 
-import {CreateCategoryController} from "@modules/cars/useCases/createCategory/CreateCategoryController"
-import { ListCategoriesController } from '@modules/cars/useCases/listCategories/ListCategoriesController';
-import { ImportCategoryController } from '@modules/cars/useCases/importCategory/ImportCategoryController';
-import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
-import { ensureAdmin } from '../middlewares/ensureAdmin';
-
+import { CreateCategoryController } from "@modules/cars/useCases/createCategory/CreateCategoryController";
+import { ListCategoriesController } from "@modules/cars/useCases/listCategories/ListCategoriesController";
+import { ImportCategoryController } from "@modules/cars/useCases/importCategory/ImportCategoryController";
+import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+import { ensureAdmin } from "../middlewares/ensureAdmin";
 
 const categoriesRoutes = Router();
 
-
 const upload = multer({
-   dest: "./tmp",
+  dest: "./tmp",
 });
 
 const createCategoryController = new CreateCategoryController();
@@ -21,10 +19,21 @@ const importCategoryController = new ImportCategoryController();
 
 const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.post("/",ensureAuthenticated, ensureAdmin, createCategoryController.handle)
+categoriesRoutes.post(
+  "/",
+  ensureAuthenticated,
+  ensureAdmin,
+  createCategoryController.handle,
+);
 
 categoriesRoutes.get("/", listCategoriesController.handle);
 
-categoriesRoutes.post("/import",ensureAuthenticated,ensureAdmin, upload.single("file"), importCategoryController.handle);
+categoriesRoutes.post(
+  "/import",
+  ensureAuthenticated,
+  ensureAdmin,
+  upload.single("file"),
+  importCategoryController.handle,
+);
 
-export { categoriesRoutes }
+export { categoriesRoutes };
