# src/swagger.json
@@ -1,144 +1,183 @@
 {
-    "openapi":"3.0.0",
-    "info":{
-        "title":"RentX Documentation",
-        "description":"This is an API Rent",
-        "version":"1.0.0",
-        "contact":{
-            "email":"matoslopes23@gmail.com"
-        }
-    },
-    "paths":{
-        "/categories": {
-            "post":{
-                "tags":["Category"],
-                "summary": "Create a category",
-                "description": "Create a new category",
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "type":"object",
-                                "properties":{
-                                    "name":{
-                                        "type":"string"
-                                    },
-                                    "description":{
-                                        "type":"string"
-                                    }
-                                },
-                                "example":{
-                                    "name":"Category name sample",
-                                    "description":"Category description sample"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses":{
-                    "201":{
-                        "description":"Created"
-                    },
-                    "500":{
-                        "description":"Category already exists"
-                    }
-                }
-            },
-            "get":{
-                "tags":["Category"],
-                "summary":"List all categories",
-                "description":"List all categories",
-                "responses":{
-                    "200":{
-                        "description":"Success",
-                        "content": {
-                            "application/json": {
-                                "schema":{
-                                    "type":"array",
-                                    "items": {
-                                        "type":"object",
-                                        "properties":{
-                                            "name":{
-                                                "type":"string"
-                                            },
-                                            "description":{
-                                                "type":"string"
-                                            }
-                                            
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/categories/import":{
-            "post":{
-                "tags":["Category"],
-                "summary":"Upload a new category",
-                "description":"Upload a new category",
-                "requestBody":{
-                    "content":{
-                        "multipart/form-data":{
-                            "schema":{
-                                "type":"object",
-                                "properties":{
-                                    "file":{
-                                        "type":"string",
-                                        "format":"binary"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses":{
-                    "201":{
-                        "description":"Created"
-                    }
-                }
-            }
-
-        },
-        "/specifications": {
-            "post":{
-                "tags":["Specifications"],
-                "summary":"Create a specification",
-                "description":"Create a new specification",
-                "requestBody":{
-                   "content":{
-                    "application/json":{
-                        "schema":{
-                            "$ref":"#/definitions/Specifications"
-                        }
-                    }
-                   }
-                },
-                "responses":{
-                    "201":{
-                        "description": "Created"
-                    },
-                    "500":{
-                        "description":"Specification already exists"
-                    }
-                }
-                
-            }
-        }
-    },
-    "definitions":{
-        "Specifications":{
-            "type":"object",
-            "properties":{
-                "name":{
-                    "type":"string"
-                },
-                "description":{
-                    "type":"string"
-                }
-            }
-        }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "RentX Documentation",
+    "description": "This is an API Rent",
+    "version": "1.0.0",
+    "contact": {
+      "email": "matoslopes23@gmail.com"
     }
+  },
+  "paths": {
+    "/categories": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Create a category",
+        "description": "Create a new category",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "name": "Category name sample",
+                  "description": "Category description sample"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Category already exists"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Category"],
+        "summary": "List all categories",
+        "description": "List all categories",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "name": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new category",
+        "description": "Upload a new category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specifications"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Specification already exists"
+          }
+        }
+      }
+    },
+    "/sessions": {
+      "post": {
+        "tags": ["Session"],
+        "summary": "Authentication user",
+        "description": "Authentication user",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Email or password incorrect"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specifications": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  }
 }
